--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Simple Image Display",
   "version": "2.0.0",
   "description": "Minimal image display addon - show any image from a URL with border radius and shadow",
-  "type": "widget",
+  "type": "widgets",
   "author": "MyWallpaper",
   "icon": "🖼️",
   "settings": {
